# BITSTACKERZ_AI

./: .gitignore  pyproject.toml  stripe.md
authentication/: forms.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_customuser_stripe_customer_id_and_more.py
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blogpost_allowed_subscription_tiers.py
core/: settings.py  urls.py  views.py
landingpage/: stripe_utils.py  urls.py  views.py
templates/authentication/: login.html  register.html
templates/dashboard/: base.html  dashboard.html
templates/dashboard/tabs/: blog.html  settings.html
templates/dashboard/tabs/blog/admin/: create_blog.html
templates/dashboard/tabs/blog/admin/partials/: blog_form.html
templates/dashboard/tabs/blog/customer/: blog.html  blog_detail.html
templates/dashboard/tabs/reports/: annual.html  custom.html  monthly.html  reports_base.html
templates/dashboard/tabs/reports/partials/: report_disclaimer.html
templates/landingpage/: about.html  base.html  checkout_cancel.html  checkout_success.html  home.html
templates/landingpage/partials/: pricing.html
