[tool.poetry]
name = "bitstackerz-ai"
version = "0.1.0"
description = ""
authors = ["juju"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
commitizen = "^4.7.0"
stripe = "^12.1.0"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
